fix blurry text on hover mod item

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -47,7 +47,6 @@
     animation: glowing 20s linear infinite;
     opacity: 0;
     transition: opacity .2s ease-in-out;
-    border-radius: 10px;
 }
 
 @keyframes glowing {
